--- a/templates/home.html
+++ b/templates/home.html
@@ -1,73 +1,97 @@
-<!DOCTYPE html>
-<html>
-<title>Home</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='footer.css') }}">
-<link rel="shortcut icon" href="static/logo.ico">
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-<body>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">Spons.Central</a>
+    <body>     
 
-    </div>
-    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+       <nav class="nav-extended">
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo">SpamHam.com</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="login.html">Login</a></li>
+              <li><a href="regForm.html">Register</a></li>
+              <li><a href="layout.html">Logout</a></li>
+            </ul>
+          </div>
+          <div class="nav-content">
+            <ul class="tabs tabs-transparent">
+              
+            </ul>
+          </div>
+        </nav>
 
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
-</div>
+        <ul class="sidenav" id="mobile-demo">
+          <li><a href="login.html">Login</a></li>
+          <li><a href="regForm.html">Register</a></li>
+          <li><a href="layout.html">Logout</a></li>
+        </ul>
 
-<!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Sponsorships that matter</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Make a beginning that matters</span><br>
-    <span class="w3-large">Say 'NO' to hassle. 'YES' to Spons.Central.</span>
-    <p><a href="{{ url_for('register') }}" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Start today</a>
-    <a href="{{ url_for('login') }}" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Login</a>
-    <a href="{{ url_for('about') }}" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">What is Spons.Central?</a></p>
-  </div> 
-  
-</header>
-<!-- Footer-->
-<footer class="w3-center w3-black w3-padding-64">
-  <h3> Connect. Select. Sponsor.</h3>
-  <a href="{{ url_for('about') }}" class="footer-links"></i>ABOUT US</a>  •
-  <a href="{{ url_for('team') }}" class="footer-links"></i>MEET THE TEAM</a>  •
-  <a href="{{ url_for('work') }}" class="footer-links"></i>WHAT WE DO</a> 
-  
-  <p>© 2018 Copyright:Spons.Central</p>
-</footer>
-<!--<footer class="footer-basic-centered">
+            
+        {% block content %}
+       
+        <div class="container">
+          <div class="row"> 
+            <div class="col s12 m4 l3">
+              <div class="row">
+                <div class="card-panel white">
+                  <a href="login.html" class="waves-effect waves-teal btn-flat">Compose</a></a>             
+                </div>        
+                <div class="card-panel white">
+                  <span><a href="login.html" class="waves-effect waves-teal btn-flat btn-medium">Spam Mails</a>
+                  </span>
+                </div>
+              </div>
+            </div>          
+        
+            <div class="col s12 m8 l9">
+              <blockquote>
+                Inbox 
+              </blockquote>
+              <script>
+                  document.addEventListener('DOMContentLoaded', function() {
+                  var elems = document.querySelectorAll('.collapsible');
+                  var instances = M.Collapsible.init(elems, options);
+                });
+                   $(document).ready(function(){
+                    $('.collapsible').collapsible();
+                  });
+        
 
-          <p class="footer-company-motto">Connect. Select. Sponsor.</p>
+              </script>  
+              <ul class="collapsible">
+                <li class="active">
+                  <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+                <li>
+                  <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+                <li>
+                  <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+              </ul>
+          </div>
+          </div>
+        </div>
+     
 
-          <p class="footer-links">
-            <a href="#">ABOUT US</a>
-            ·
-            <a href="{{ url_for('team') }}">MEET THE TEAM</a>
-            ·
-            <a href="#">WHAT WE DO</a>
-          </p>
+        {% endblock %}
 
-          <p class="footer-company-name">© 2018 Copyright:Spons.Central</p>
-
-        </footer>-->
- 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
-
-</body>
-</html>
+     <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="js/collapsible.js"></script>
+      
+    </body>
+  </html>
+        
