--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,9 +36,7 @@
         </ul>
 
             
-        {% block content %}
-
-        {% endblock %}
+        {% block content %}{% endblock %}
 
      <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
