--- a/templates/compose.html
+++ b/templates/compose.html
@@ -1,41 +1,5 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-
-    <body>     
-
-       <nav class="nav-extended">
-          <div class="nav-wrapper">
-            <a href="#" class="brand-logo">SpamHam.com</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="login.html">Login</a></li>
-              <li><a href="regForm.html">Register</a></li>
-              <li><a href="home.html">Logout</a></li>
-            </ul>
-          </div>
-          <div class="nav-content">
-            <ul class="tabs tabs-transparent">
-              
-            </ul>
-          </div>
-        </nav>
-
-        <ul class="sidenav" id="mobile-demo">
-          <li><a href="login.html">Login</a></li>
-          <li><a href="regForm.html">Register</a></li>
-          <li><a href="home.html">Logout</a></li>
-        </ul>
-
-
+{% extends "layout.html" %}
+{% block content %}
 <div class=container>
 
 	<blockquote>
@@ -43,25 +7,41 @@
     </blockquote>
 
 	<div class="row">
-	    <form class="col s12">
-	      <div class="row">
-	        <div class="input-field col s12">
-	          <input id="email" type="email" class="validate">
-	          <label for="email">Email</label>
-	          <span class="helper-text" data-error="wrong" data-success="right">Reciever's Email-ID</span>
-	        </div>
-	      </div>
-	    </form>
-	  </div>
+	    <form class="col s12" method="POST" action"">
+        {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+    	      <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                </fieldset>
+        </form>
+	          <span class="helper-text" data-error="wrong" data-success="right">Reciever's Email-ID</span>                      
 
+	        </div>
+
+	     
 	<div class="row">
 	    <form class="col s12">
 	      <div class="row">
 	        <div class="input-field col s12">
 	          <textarea id="textarea1" class="materialize-textarea"></textarea>
+             {{ form.text(class="form-control form-control-lg") }}
 	          <label for="textarea1">Textarea</label>
+
 	        </div>
+
 	      </div>
+
 	    </form>
 	</div>
 	<button class="btn waves-effect waves-light" type="submit" name="action">Send
@@ -69,12 +49,5 @@
 	  </button>
 
 </div>
+{% endblock %}
 
-
-	        
-<!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/collapsible.js"></script>
-      
-    </body>
-  </html>
