--- a/SH/templates/home.html
+++ b/SH/templates/home.html
@@ -10,21 +10,21 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body>     
+    <body>
 
        <nav class="nav-extended">
           <div class="nav-wrapper">
             <a href="#" class="brand-logo">SpamHam.com</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="login.html">Login</a></li>
+              <li><a href="{{ url_for('login') }}">Login</a></li>
               <li><a href="regForm.html">Register</a></li>
               <li><a href="layout.html">Logout</a></li>
             </ul>
           </div>
           <div class="nav-content">
             <ul class="tabs tabs-transparent">
-              
+
             </ul>
           </div>
         </nav>
@@ -35,26 +35,26 @@
           <li><a href="layout.html">Logout</a></li>
         </ul>
 
-            
+
         {% block content %}
-       
+
         <div class="container">
-          <div class="row"> 
+          <div class="row">
             <div class="col s12 m4 l3">
               <div class="row">
                 <div class="card-panel white">
-                  <a href="login.html" class="waves-effect waves-teal btn-flat">Compose</a></a>             
-                </div>        
+                  <a href="login.html" class="waves-effect waves-teal btn-flat">Compose</a></a>
+                </div>
                 <div class="card-panel white">
                   <span><a href="login.html" class="waves-effect waves-teal btn-flat btn-medium">Spam Mails</a>
                   </span>
                 </div>
               </div>
-            </div>          
-        
+            </div>
+
             <div class="col s12 m8 l9">
               <blockquote>
-                Inbox 
+                Inbox
               </blockquote>
               <script>
                   document.addEventListener('DOMContentLoaded', function() {
@@ -64,9 +64,9 @@
                    $(document).ready(function(){
                     $('.collapsible').collapsible();
                   });
-        
 
-              </script>  
+
+              </script>
               <ul class="collapsible">
                 <li class="active">
                   <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
@@ -84,14 +84,13 @@
           </div>
           </div>
         </div>
-     
+
 
         {% endblock %}
 
      <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script type="text/javascript" src="js/collapsible.js"></script>
-      
+
     </body>
   </html>
-        
