--- a/SH/templates/home.html
+++ b/SH/templates/home.html
@@ -1,49 +1,12 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-
-    <body>
-
-       <nav class="nav-extended">
-          <div class="nav-wrapper">
-            <a href="#" class="brand-logo">SpamHam.com</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="{{ url_for('login') }}">Login</a></li>
-              <li><a href="regForm.html">Register</a></li>
-              <li><a href="layout.html">Logout</a></li>
-            </ul>
-          </div>
-          <div class="nav-content">
-            <ul class="tabs tabs-transparent">
-
-            </ul>
-          </div>
-        </nav>
-
-        <ul class="sidenav" id="mobile-demo">
-          <li><a href="login.html">Login</a></li>
-          <li><a href="regForm.html">Register</a></li>
-          <li><a href="layout.html">Logout</a></li>
-        </ul>
-
-
-        {% block content %}
+{% extends "layout.html" %}
+{% block content %}
 
         <div class="container">
           <div class="row">
             <div class="col s12 m4 l3">
               <div class="row">
                 <div class="card-panel white">
-                  <a href="login.html" class="waves-effect waves-teal btn-flat">Compose</a></a>
+                  <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
                 </div>
                 <div class="card-panel white">
                   <span><a href="login.html" class="waves-effect waves-teal btn-flat btn-medium">Spam Mails</a>
@@ -85,12 +48,4 @@
           </div>
         </div>
 
-
-        {% endblock %}
-
-     <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/collapsible.js"></script>
-
-    </body>
-  </html>
+{% endblock content %}
