--- a/SH/templates/layout.html
+++ b/SH/templates/layout.html
@@ -4,7 +4,7 @@
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -17,9 +17,13 @@
             <a href="#" class="brand-logo">SpamHam.com</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="login.html">Login</a></li>
-              <li><a href="regForm.html">Register</a></li>
-              <li><a href="home.html">Logout</a></li>
+              {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('home') }}">Logout</a></li>
+              {% else %}
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+              
+              {% endif %}
             </ul>
           </div>
           <div class="nav-content">
@@ -29,12 +33,7 @@
           </div>
         </nav>
 
-        <ul class="sidenav" id="mobile-demo">
-          <li><a href="login.html">Login</a></li>
-          <li><a href="regForm.html">Register</a></li>
-          <li><a href="home.html">Logout</a></li>
-        </ul>
-
+      
             
         {% block content %}{% endblock %}
 
