--- a/SH/templates/login.html
+++ b/SH/templates/login.html
@@ -1,5 +1,3 @@
-
-
 {% extends "layout.html" %}
 {% block content %}
 
@@ -14,16 +12,16 @@
                 <legend class="border-bottom mb-4">Log In</legend>
 
                 <div class="form-group">
-                    {{ form.email.label(class="form-control-label") }}
-                    {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                    {{ form.email_id.label(class="form-control-label") }}
+                    {% if form.email_id.errors %}
+                        {{ form.email_id(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
+                            {% for error in form.email_id.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
+                        {{ form.email_id(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <div class="form-group">
@@ -55,13 +53,13 @@
             </small>
         </div>
         </form>
-    
+
     <div class="border-top pt-3">
         <small class="text-muted">
             Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
         </small>
     </div>
-    
+
     </body>
 </html>
 {% endblock content %}
