--- a/SH/templates/compose.html
+++ b/SH/templates/compose.html
@@ -22,31 +22,29 @@
                     {% else %}
                         {{ form.email_id(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                </fieldset>
+
+
+				{% if form.text.errors %}
+					{{ form.text(class="form-control form-control-lg is-invalid") }}
+					<div class="invalid-feedback">
+						{% for error in form.text.errors %}
+							<span>{{ error }}</span>
+						{% endfor %}
+					</div>
+				{% else %}
+					{{ form.text(class="form-control form-control-lg") }}
+				{% endif %}
+		  	</div>
+        	</fieldset>
+			<div>
+				{{ form.send(class="btn btn-outline-info") }}
+			</div>
         </form>
 	          <span class="helper-text" data-error="wrong" data-success="right">Reciever's Email-ID</span>
 
 	        </div>
 
-
-	<div class="row">
-	    <form class="col s12">
-	      <div class="row">
-	        <div class="input-field col s12">
-	          <textarea id="textarea1" class="materialize-textarea"></textarea>
-             {{ form.text(class="form-control form-control-lg") }}
-	          <label for="textarea1">Textarea</label>
-
-	        </div>
-
-	      </div>
-
-	    </form>
 	</div>
-	<button class="btn waves-effect waves-light" type="submit" name="action">Send
-	    <i class="material-icons right">send</i>
-	  </button>
 
 </div>
 {% endblock %}
