--- a/SH/templates/layout.html
+++ b/SH/templates/layout.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body>     
+    <body>
 
        <nav class="nav-extended">
           <div class="nav-wrapper">
@@ -18,27 +18,26 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('home') }}">Logout</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
               {% else %}
                 <li><a href="{{ url_for('login') }}">Login</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
-              
+
               {% endif %}
             </ul>
           </div>
           <div class="nav-content">
             <ul class="tabs tabs-transparent">
-              
+
             </ul>
           </div>
         </nav>
 
-      
-            
+
+
         {% block content %}{% endblock %}
 
      <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
   </html>
-        
