--- a/SH/templates/home.html
+++ b/SH/templates/home.html
@@ -7,6 +7,7 @@
               <div class="row">
                 <div class="card-panel white">
                   <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
+                  <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
                 </div>
                 <div class="card-panel white">
                   <span><a href="login.html" class="waves-effect waves-teal btn-flat btn-medium">Spam Mails</a>
