--- a/SH/templates/home.html
+++ b/SH/templates/home.html
@@ -7,7 +7,6 @@
               <div class="row">
                 <div class="card-panel white">
                   <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
-                  <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
                 </div>
                 <div class="card-panel white">
                   <span><a href="login.html" class="waves-effect waves-teal btn-flat btn-medium">Spam Mails</a>
@@ -31,20 +30,9 @@
 
 
               </script>
-              <ul class="collapsible">
-                <li class="active">
-                  <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                </li>
-                <li>
-                  <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                </li>
-                <li>
-                  <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                </li>
-              </ul>
+              {% for message in messages %}
+                <p><h5>{{message}}</h5></p>
+              {% endfor %}
           </div>
           </div>
         </div>
