--- a/SH/templates/layout.html
+++ b/SH/templates/layout.html
@@ -18,6 +18,7 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('account') }}">Hi, {currentuser} </a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
               {% else %}
                 <li><a href="{{ url_for('login') }}">Login</a></li>
@@ -38,6 +39,7 @@
         {% block content %}{% endblock %}
 
      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="/static/js/materialize.min.js"></script>
+      <script type="text/javascript" src="/static/js/collapsible.js"></script>
     </body>
   </html>
