--- a/SH/templates/spam.html
+++ b/SH/templates/spam.html
@@ -9,7 +9,7 @@
                   <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
                 </div>
                 <div class="card-panel white">
-                  <span><a href="{{ url_for('spam') }}" class="waves-effect waves-teal btn-flat btn-medium">Spam Mails</a>
+                  <span><a href="{{ url_for('home') }}" class="waves-effect waves-teal btn-flat btn-medium">Inbox</a>
                   </span>
                 </div>
               </div>
@@ -17,7 +17,7 @@
 
             <div class="col s12 m8 l9">
               <blockquote>
-                Inbox
+                Spam Mails
               </blockquote>
               <div class="row">
                 <div class="col s12 m8 l12">
