--- a/SH/templates/home.html
+++ b/SH/templates/home.html
@@ -22,12 +22,21 @@
               <div class="row">
                 <div class="col s12 m8 l12">
                   {% for message in messages %}
-                  <div class="card-panel white">
-                    <span class="card-title">{{ message[0] }}</span>
+                    {% if message[0]== current_user.email_id %}
+                        <div class="card-panel white">
+                          <span class="card-title"> me </span>
 
-                      <p><h5>{{ message[1] }}</h5></p>
+                            <p><h5>{{ message[1] }}</h5></p>
 
-                  </div>
+                        </div>
+                    {% else %}
+                        <div class="card-panel white">
+                            <span class="card-title">{{ message[0] }}</span>
+
+                              <p><h5>{{ message[1] }}</h5></p>
+
+                        </div>
+                    {% endif %}
                   {% endfor %}
                 </div>
               </div>
