--- a/SH/templates/spam.html
+++ b/SH/templates/spam.html
@@ -9,7 +9,7 @@
                   <a href="{{ url_for('compose') }}" class="waves-effect waves-teal btn-flat">Compose</a></a>
                 </div>
                 <div class="card-panel white">
-                  <span><a href="{{ url_for('home') }}" class="waves-effect waves-teal btn-flat btn-medium">Inbox</a>
+                  <span><a href="{{ url_for('account') }}" class="waves-effect waves-teal btn-flat btn-medium">Inbox</a>
                   </span>
                 </div>
               </div>
@@ -22,12 +22,21 @@
               <div class="row">
                 <div class="col s12 m8 l12">
                   {% for message in messages %}
-                  <div class="card-panel white">
-                    <span class="card-title">{{message[0]}}</span>
+                  {% if message[0]== current_user.email_id %}
+                    <div class="card-panel white">
+                      <span class="card-title"> me </span>
 
-                      <p><h5>{{message[1]}}</h5></p>
+                        <p><h5>{{ message[1] }}</h5></p>
 
-                  </div>
+                    </div>
+                  {% else %}
+                    <div class="card-panel white">
+                        <span class="card-title">{{ message[0] }}</span>
+
+                          <p><h5>{{ message[1] }}</h5></p>
+
+                    </div>
+                  {% endif %}
                   {% endfor %}
                 </div>
               </div>
