Minor changes in html

--- a/SH/templates/spam.html
+++ b/SH/templates/spam.html
@@ -31,7 +31,8 @@
                     </div>
                   {% else %}
                     <div class="card-panel white">
-                        <span class="card-title">{{ message[0] }}</span>
+                        <span class="card-title">{{ message[0] }} </span>
+                        <div align="right"><h7>{{ message[2] }}</h7></div>
 
                           <p><h5>{{ message[1] }}</h5></p>
 
