--- a/SH/templates/home.html
+++ b/SH/templates/home.html
@@ -33,6 +33,8 @@
                         <div class="card-panel white">
                             <span class="card-title">{{ message[0] }}</span>
 
+                            <div align="right"><h7>{{ message[2] }}</h7></div>
+
                               <p><h5>{{ message[1] }}</h5></p>
 
                         </div>
