--- a/SH/templates/spam.html
+++ b/SH/templates/spam.html
@@ -25,7 +25,7 @@
                   {% if message[0]== current_user.email_id %}
                     <div class="card-panel white">
                       <span class="card-title"> me </span>
-
+                      <div align="right"><h7>{{ message[2] }}</h7></div>
                         <p><h5>{{ message[1] }}</h5></p>
 
                     </div>
